--- a/dockSettings.ini
+++ b/dockSettings.ini
@@ -5,4 +5,5 @@ First =False
 DefaultIconFolder=E:\Program Files (x86)\Rocketdock\icons\Steampunk_Clockwerk_Kubrick
 defaultFolderNodeKey=E:\Program Files (x86)\Rocketdock\icons\Steampunk_Clockwerk_Kubrick
 defaultStrength=400
+defaultStyle=False
 defaultFont=Centurion Light SF
