--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,27 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+# Custom for Visual Studio
+
+*.ctx    -diff
+*.frx    -diff
+*.res    -diff
+*.RES    -diff
+*.bas    eol=crlf
+*.cls    eol=crlf
+*.ctl    eol=crlf
+*.frm    eol=crlf
+*.txt    eol=crlf
+*.vbp    eol=crlf
+
+# Standard to msysgit
+*.doc	 diff=astextplain
+*.DOC	 diff=astextplain
+*.docx  diff=astextplain
+*.DOCX  diff=astextplain
+*.dot   diff=astextplain
+*.DOT   diff=astextplain
+*.pdf   diff=astextplain
+*.PDF	 diff=astextplain
+*.rtf	 diff=astextplain
+*.RTF diff=astextplain
