--- a/.gitattributes
+++ b/.gitattributes
@@ -1,18 +1,37 @@
 # Auto detect text files and perform LF normalization
-* text=auto
+* text eol=auto
 
 # Custom for Visual Studio
 
+*.res binary
+*.RES binary
+*.frx binary
+*.exe binary
+*.dll binary
+*.ico binary
+*.gif binary
+*.ocx binary
+*.tlb binary
+*.ocx.bin binary
+*.ism binary
+*.bin binary
+*.aps binary
+*.ncb binary
+*.exe.compat binary
+*.ocx.compat binary
+
 *.ctx    -diff
-*.frx    -diff
-*.res    -diff
-*.RES    -diff
-*.bas    eol=crlf
-*.cls    eol=crlf
-*.ctl    eol=crlf
-*.frm    eol=crlf
-*.txt    eol=crlf
-*.vbp    eol=crlf
+
+*.ctl text eol=crlf
+*.txt text eol=crlf
+*.bas text eol=crlf
+*.frm text eol=crlf
+*.log text eol=crlf
+*.vbp text eol=crlf
+*.cls text eol=crlf
+*.vbw text eol=crlf
+*.dsr text eol=crlf
+*.ini text eol=crlf
 
 # Standard to msysgit
 *.doc	 diff=astextplain
