--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,46 @@
 # Auto detect text files and perform LF normalization
 * text auto
+
+# Custom for Visual Studio
+
+*.res binary
+*.RES binary
+*.frx binary
+*.exe binary
+*.dll binary
+*.ico binary
+*.gif binary
+*.ocx binary
+*.tlb binary
+*.ocx.bin binary
+*.ism binary
+*.bin binary
+*.aps binary
+*.ncb binary
+*.exe.compat binary
+*.ocx.compat binary
+
+*.ctx    -diff
+
+*.ctl text eol=crlf
+*.txt text eol=crlf
+*.bas text eol=crlf
+*.frm text eol=crlf
+*.log text eol=crlf
+*.vbp text eol=crlf
+*.cls text eol=crlf
+*.vbw text eol=crlf
+*.dsr text eol=crlf
+*.ini text eol=crlf
+
+# Standard to msysgit
+*.doc	 diff=astextplain
+*.DOC	 diff=astextplain
+*.docx  diff=astextplain
+*.DOCX  diff=astextplain
+*.dot   diff=astextplain
+*.DOT   diff=astextplain
+*.pdf   diff=astextplain
+*.PDF	 diff=astextplain
+*.rtf	 diff=astextplain
+*.RTF diff=astextplain
